--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ before_install:
     - docker build -t ak/rt -f Dockerfile.dev .
 
 script:
-    - docker run ak/rt npm run test -- --coverage
+    - docker run e CI=true ak/rt npm run test
